--- a/Project.toml
+++ b/Project.toml
@@ -3,3 +3,4 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GraphViz = "f526b714-d49f-11e8-06ff-31ed36ee7ee0"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
