--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GraphViz = "f526b714-d49f-11e8-06ff-31ed36ee7ee0"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
